[gd_scene load_steps=2 format=3 uid="uid://byk1ulvmf36tt"]

[ext_resource type="Script" uid="uid://dkdwmygmto4c" path="res://ui/search/search.gd" id="1_oavdf"]

[node name="SearchRow" type="HBoxContainer"]
custom_minimum_size = Vector2(36, 0)
offset_right = 588.0
offset_bottom = 31.0
theme_override_constants/separation = 8
script = ExtResource("1_oavdf")

[node name="DescLabel" type="Label" parent="."]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Description"
autowrap_mode = 3

[node name="TimeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Time"

[node name="ActionButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "fghgfhgf"
